# RAGLite

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CI_HANG_ANALYSIS.md  CLAUDE.md  FAST_TEST_SUITE_GUIDE.md  Makefile  OPTIMIZATION-CHANGES.txt  OPTIMIZATION-RESULTS.md  PYTEST_OPTIMIZATION_SUMMARY.md  QA_FIXES_APPLIED.md  QUICK_TEST_COMMANDS.md  README.md  RUNNER_ISOLATION_SETUP.md  TEST-OPTIMIZATION-SUMMARY.md  TESTING-QUICK-START.md  TEST_ARCHITECTURE_DIAGNOSIS.md  TEST_OPTIMIZATION_STATUS.md  TEST_PERFORMANCE_ARCHITECTURE.md  TEST_PERFORMANCE_FIX_SUMMARY.md  TEST_SPEED_OPTIMIZATION_GUIDE.md  VSCODE-FIX-SUMMARY.md  VSCODE-TEST-EXPLORER-SETUP.md  VS_CODE_TESTING_GUIDE.md  baseline-accuracy-report-FINAL.txt  baseline-accuracy-report.txt  baseline-failure-analysis.md  baseline-performance-benchmarks.txt  configure-runners-final.sh  coverage.xml  docker-compose.yml  monitor_and_run.sh  pyproject.toml  pytest.ini  requirements.txt  run_full_pipeline.sh  (+5 more)
.bmad-core/: core-config.yaml  install-manifest.yaml
.github/workflows/: ci.yml  tests.yml
bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/bmm/: config.yaml
bmad/core/: config.yaml
data/: financial_docs_bm25.pkl
docs/: NEXT-SESSION-STORY-1.15.md  NEXT-SESSION-STORY-1.15C.md  README.md  SESSION-SUMMARY-2025-10-16-STORY-1.15.md  TEST-CONSOLIDATION-SUMMARY.md  TEST-STRUCTURE-GUIDE.md  TESTING-OPTIMIZATION.md  TESTING-PERFORMANCE.md  TROUBLESHOOTING.md  VSCODE-TESTING.md  accuracy-tracking-log.jsonl  backlog.md  bmm-workflow-status.md  ci-workflow-guide.md  cohesion-check-report.md  epic-alignment-matrix.md  integration-issues.md  phase2a-deep-dive-analysis.md  prd-improvement-recommendations.md  project-workflow-analysis.md  project-workflow-status-2025-10-13.md  solutioning-phase-completion-summary.md  sprint-change-proposal-epic-2-pivot-2025-10-18.md  sprint-status.yaml  tech-spec-epic-1.md  tech-spec-epic-2.md  tech-spec-epic-3.md  tech-spec-epic-4.md  tech-spec-epic-5.md  validation-report-solutioning-readiness-20251012.md  week-0-spike-report.md
docs/architecture/: 1-introduction-vision.md  2-executive-summary.md  3-repository-structure-monolithic.md  4-research-findings-summary-validated-technologies.md  5-technology-stack-definitive.md  6-complete-reference-implementation.md  7-data-layer.md  8-phased-implementation-strategy-v11-simplified.md  9-deployment-strategy-simplified.md  ARCHITECTURE-ALIGNMENT-REPORT.md  change-log.md  cicd-pipeline-architecture.md  coding-standards.md  conclusion.md  data-layer.md  deployment-architecture.md  development-workflow.md  executive-summary.md  high-level-architecture.md  how-to-read-this-document.md  implementation-plan-option-c-phase2.md  index.md  microservices-architecture.md  monitoring-observability.md  orchestration-layer.md  performance-scalability.md  phased-implementation-strategy.md  research-findings-summary.md  security-compliance.md  source-tree.md  tech-stack.md  technology-stack.md  testing-strategy.md
docs/archive/: INTEGRATION-COMPLETE.md  README.md  STORY-1.14-INGESTION-GUIDE.md  architecture-addendum-simplified.md  architecture-final-recommendation.md  architecture-v1.0-backup.md  architecture-v1.1-insert.md  architecture-v1.1-prepend.md  architecture-v1.1.md  architecture.md  brief.md  epic-2-advanced-document-understanding-DEPRECATED-2025-10-19.md  front-end-spec.md  phase1-mvp-checklist.md  prd.md  story-1.10.md  story-1.11.md  story-1.13.md  story-1.14-fix-ground-truth-test-set.md  story-1.15-OLD-archived.md  story-1.4.md  story-1.5.md  story-1.6.md  story-1.7.md  story-1.9.md  story-2.1-hybrid-search.md  story-2.2-element-chunking.md  story-2.2-financial-embeddings-evaluation.md  story-context-1.1.15.xml  story-context-1.1.6.xml  story-context-1.1.8.xml  story-context-1.10.xml  story-context-1.11.xml  story-context-1.15A.xml  story-context-1.3.xml  story-context-1.4-enhancement-summary.md  story-context-1.4.xml  story-context-2.1.xml
migrations/: 001_apply_schema.py  001_hybrid_entity_model.md  002_create_financial_tables.sql
raglite/: __init__.py  main.py
scripts/: accuracy_utils.py  add-raglite-labels-simple.sh  add-raglite-runner-labels.sh  analyze-and-normalize-entities.py  analyze-auto-classification-accuracy.py  analyze-chunk-content.py  analyze-semantic-dilution.py  analyze-table-diversity.py  analyze-table-structures.py  analyze-table-types.py  analyze-unknown-headers.py  apply-corrections-safe.py  apply-page-corrections.py  apply-phase3-corrections.py  check-header-row-count.py  check-postgres-documents.py  check-tsvector.py  clear-postgres-and-reingest.py  compare-phase2a-results.py  consolidate-tests.sh  create_sample_pdf.py  daily-accuracy-check.py  debug-accuracy-regression.py  debug-bm25-scores.py  debug-docling-markdown.py  debug-docling-tables.py  debug-hybrid-search-scoring.py  debug-page-20-layout-detection.py  debug-rrf-single-query.py  debug-sql-backend-integration.py  debug-table-structure.py  diagnose-header-cell-structure.py  diagnose-header-cells-page23.py  diagnose-page-numbers.py  diagnose-page20-extraction.py  diagnose-pages-20-21-tables.py  diagnose-phase2a.py  diagnose-tsquery.py  extract-pages-1-20.py  extract-pdf-excerpt.py  (+91 more)
spike/: chunk_documents.py  config.py  create_ground_truth.py  generate_embeddings.py  ingest_pdf.py  mcp_server.py  store_vectors.py  test_mcp_server.py  test_page_extraction.py
story-2.2-pivot-analysis/: 00-EXECUTIVE-SUMMARY.md  01-ROOT-CAUSE-ANALYSIS.md  02-ULTRA-ANALYSIS-ALL-APPROACHES.md  03-HYBRID-GRAPHRAG-STRUCTURED.md  04-EPIC-2-PLAN-FLAWS.md  05-AGENTIC-HYBRID-GRAPHRAG-ANALYSIS.md  06-AGENT-FRAMEWORK-SELECTION.md  07-FRAMEWORK-UPDATE-AWS-CLAUDE.md  08-PDF-INGESTION-PERFORMANCE-ANALYSIS.md  APPROVAL-AND-NEXT-STEPS.md  COMPREHENSIVE-DOCUMENTATION-AUDIT.md  COURSE-CORRECTION-WORKFLOW-IN-PROGRESS.md  FAILURE_ANALYSIS.md  HANDOFF-TO-PO-AND-ARCHITECT.md  PM_ESCALATION_REPORT.md  README-HANDOFF-ROUTING.md  README.md  SPRINT-CHANGE-PROPOSAL.md  STORY_2.2_STATUS_REPORT.md
tests/: conftest.py  ground_truth.json
(+345 files in other folders)
