[tool.poetry]
name = "raglite"
version = "1.1.0"
description = "AI-powered financial document analysis using Retrieval-Augmented Generation (RAG)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/YOUR_USERNAME/RAGLite"
repository = "https://github.com/YOUR_USERNAME/RAGLite"
keywords = ["rag", "financial-analysis", "mcp", "ai", "llm", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.11"

# PDF Processing (Week 0 validated)
docling = "==2.55.1"

# Embeddings (Week 0 validated - Fin-E5)
sentence-transformers = "==5.1.1"

# Vector Database (Week 0 validated)
qdrant-client = "==1.15.1"

# MCP Server (Week 0 validated)
fastmcp = "==2.12.4"

# LLM API Client (Phase 1 - Story 1.11)
anthropic = "^0.18.0"

# Data Validation & Settings (Phase 1 - Story 1.1)
pydantic = "^2.0"
pydantic-settings = "^2.0"

# Excel Processing (Phase 1 - Story 1.3)
openpyxl = "^3.1"
pandas = "^2.0"

# Environment Variables (Week 0 validated)
python-dotenv = "==1.1.1"

# Async Support
asyncio = "^3.4.3"

# HTTP Client (required by fastmcp >=0.28.1)
httpx = "^0.28.1"

# Forecasting (Phase 3 - deferred)
# prophet = "^1.1"

# Graph Database (Phase 2 - conditional)
# neo4j = "^5.0"

[tool.poetry.group.dev.dependencies]
# Testing (Week 0 validated)
pytest = "==8.4.2"
pytest-asyncio = "==1.2.0"
pytest-cov = "^4.1"
pytest-mock = "^3.12"

# Code Formatting & Linting (Story 1.1)
black = "^23.3"
ruff = "^0.0.270"
isort = "^5.12"

# Type Checking (Phase 4 - optional for Phase 1)
mypy = "^1.4"

# Pre-commit Hooks
pre-commit = "^3.0"

# Documentation (optional)
# sphinx = "^7.0"
# sphinx-rtd-theme = "^1.3"

[tool.poetry.group.test.dependencies]
# Additional test utilities
faker = "^18.0"  # Generate test data
freezegun = "^1.2"  # Mock datetime in tests

[tool.poetry.scripts]
# CLI entrypoints
raglite-server = "raglite.main:main"
raglite-ingest = "scripts.init_qdrant:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ============================================================================
# BLACK CONFIGURATION (Code Formatter)
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ============================================================================
# RUFF CONFIGURATION (Linter)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"

# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (black handles this)
    "B008",  # Do not perform function calls in argument defaults
    "C901",  # Too complex (will address in Phase 4 refactoring)
]

# Exclude directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py are OK

# ============================================================================
# ISORT CONFIGURATION (Import Sorting)
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# ============================================================================
# PYTEST CONFIGURATION
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["raglite/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Show summary of all test outcomes
    "--strict-markers",       # Error on unknown markers
    "--strict-config",        # Error on unknown config
    "--showlocals",           # Show local variables in tracebacks
    "-v",                     # Verbose output
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# ============================================================================
# COVERAGE CONFIGURATION
# ============================================================================
[tool.coverage.run]
source = ["raglite"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true

# ============================================================================
# MYPY CONFIGURATION (Type Checking - Phase 4)
# ============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "sentence_transformers.*",
    "qdrant_client.*",
]
ignore_missing_imports = true
